package com.sep490.slms2026.entity;

import com.sep490.slms2026.enums.PropertyStatus;
import jakarta.persistence.*;
import lombok.*;

import java.io.Serializable;
import java.math.BigDecimal;
import java.time.LocalDate;
import java.time.LocalDateTime;
import java.util.List;
import java.util.UUID;

@Entity
@Table(name = "properties")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Property implements Serializable {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(name = "property_name", nullable = false)
    private String propertyName;

    /** Mã nhà cố định — dùng khớp folder zip import hoá đơn, không đổi khi đổi tên. */
    @Column(name = "property_code", nullable = false, unique = true, length = 32)
    private String propertyCode;

    @Column(nullable = false)
    private String address;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "zone_id", nullable = false)
    private Zone zone;

    @Column(name = "area_size")
    private Double areaSize;

    @Column(name = "length_m")
    private Double length;

    @Column(name = "width_m")
    private Double width;

    @Column(name = "total_floor")
    private Integer totalFloor;

    @Column(name = "is_whole_house")
    private Boolean wholeHouse;

    @Column(name = "has_renovation")
    private Boolean hasRenovation;

    @Column(name = "total_rooms")
    private Integer totalRooms;

    @ElementCollection
    @CollectionTable(name = "property_images", joinColumns = @JoinColumn(name = "property_id"))
    @Column(name = "image_url")
    private List<String> imageUrls;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    private PropertyStatus status = PropertyStatus.DRAFT;

    @Enumerated(EnumType.STRING)
    @Column(name = "previous_status")
    private PropertyStatus previousStatus;

    @Column(name = "created_by")
    private Long createdBy;

    @Column(name = "operation_manager_id")
    private UUID operationManagerId;


    @Column(name = "descriptions", nullable = false)
    private String descriptions;

    /** Giá niêm yết nhà nguyên căn (listedPrice). */
    @Column
    private BigDecimal price;

    /** Giá đang áp dụng. Nhà trống = listedPrice. */
    @Column(name = "applied_price")
    private BigDecimal appliedPrice;

    @Column
    private Double latitude;

    @Column
    private Double longitude;

    /** Đơn giá điện (VNĐ/kWh) hiển thị cho khách */
    @Column(name = "electricity_unit_price")
    private BigDecimal electricityUnitPrice;

    /** Đơn giá nước (VNĐ/m³) hiển thị cho khách */
    @Column(name = "water_unit_price")
    private BigDecimal waterUnitPrice;

    /** Mã khách hàng điện (EVN) — đối chiếu khi import hoá đơn điện */
    @Column(name = "electricity_customer_code", length = 64)
    private String electricityCustomerCode;

    /** Mã khách hàng nước — đối chiếu khi import hoá đơn nước */
    @Column(name = "water_customer_code", length = 64)
    private String waterCustomerCode;

    /** Số tháng tiền cọc mặc định (1 hoặc 2) */
    @Column(name = "deposit_months")
    private Integer depositMonths;

    /** Phí dịch vụ cố định hàng tháng (VNĐ) */
    @Column(name = "service_fee")
    private BigDecimal serviceFee;

    @Column(name = "renovation_start_date")
    private LocalDate renovationStartDate;

    @Column(name = "renovation_end_date")
    private LocalDate renovationEndDate;

    @Column(name = "renovation_completed", nullable = false)
    private boolean renovationCompleted = false;

    @Column(name = "submitted_to_host_at")
    private LocalDateTime submittedToHostAt;

    /** Thời điểm gán OM và nhà chuyển ACTIVE (manager đã nhận nhà). */
    @Column(name = "manager_accepted_at")
    private LocalDateTime managerAcceptedAt;

    @Column(name = "host_contingency_percent")
    private BigDecimal hostContingencyPercent;

    @OneToOne(mappedBy = "property", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
    private InboundContract inboundContract;

    @OneToMany(mappedBy = "property", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
    private List<Equipment> equipments;

    @OneToMany(mappedBy = "property", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
    private List<EquipmentManifest> equipmentManifests;

    @OneToMany(mappedBy = "property", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
    private List<RenovationLine> renovationLines;

    @OneToMany(mappedBy = "property", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
    private List<MonthlyReading> utilityReadings;
}
